--- a/website/templates/guide.html
+++ b/website/templates/guide.html
@@ -20,8 +20,8 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1">
     <title>Service Weaver User Guide</title>
     <!-- <meta http-equiv="refresh" content="1"> -->
-    <link rel="stylesheet" href="assets/css/common.css">
-    <link rel="stylesheet" href="assets/css/guide.css">
+    <link rel="stylesheet" href="/assets/css/common.css">
+    <link rel="stylesheet" href="/assets/css/guide.css">
   </head>
   <body>
     <div class="page">
@@ -36,6 +36,6 @@
       </div>
     </div>
   </body>
-  <script src="assets/js/toc.js"></script>
-  <script src="assets/js/copy.js"></script>
+  <script src="/assets/js/toc.js"></script>
+  <script src="/assets/js/copy.js"></script>
 </html>
