--- a/examples/online_boutique/frontend/templates/footer.html
+++ b/examples/online_boutique/frontend/templates/footer.html
@@ -28,20 +28,7 @@
                 </small>
                 <br/>
                 <small>
-                    {{ if $.deploymentDetails }}
-                        {{ if index .deploymentDetails "CLUSTERNAME" }}
-                        <b>Cluster: </b>{{ index .deploymentDetails "CLUSTERNAME" }}<br/>
-                        {{ end }}
-                        {{ if index .deploymentDetails "ZONE" }}
-                        <b>Zone: </b>{{ index .deploymentDetails "ZONE" }}<br/>
-                        {{ end }}
-                        {{ if index .deploymentDetails "HOSTNAME" }}
-                        <b>Host: </b>{{ index .deploymentDetails "HOSTNAME" }}
-                        {{ end }}
-                    {{ else }}
-                    Deployment details are still loading.
-                    Try refreshing this page.
-                    {{ end }}
+                    <b>Host: </b>{{$.hostname}}
                 </small>
             </p>
         </div>
