Added section headers to table of contents.
This PR adds section headers to the table of contents on the left side
of the user guide on the website. The section headers help divide the
long list of sections into OVERVIEW, FUNDAMENTALS, DEPLOYERS, and
REFERENCE.

--- a/website/assets/css/guide.css
+++ b/website/assets/css/guide.css
@@ -93,6 +93,13 @@
 .toc .toc-active {
   color: #e84393;
 }
+.toc-section {
+  font-weight: 400;
+  color: #e74c3c;
+}
+.toc-section:nth-child(n+2) {
+  padding-top: 12pt;
+}
 
 .contents {
   flex: 1 0 auto;
