Add a link to pkg.go.dev to the website.

--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -23,7 +23,7 @@
       <li><a href="/" class="navlink {{if eq .Path "index.html"}}active{{end}}">Home</a></li>
       <li><a href="/docs.html" class="navlink {{if eq .Path "docs.html"}}active{{end}}">Docs</a></li>
       <li><a href="/blog" class="navlink {{if prefix .Path "blog/"}}active{{end}}">Blog</a></li>
-      <li><a href="/yyy" class="navlink {{if eq .Path "TODO"}}active{{end}}">API</a></li>
+      <li><a href="https://pkg.go.dev/github.com/ServiceWeaver/weaver" class="navlink">API</a></li>
     </ul>
   </div>
   <a class="icon" href="https://github.com/ServiceWeaver/weaver">
