Added Google Analytics to website.
Google Analytics lets you track visits to your website. It lets you
monitor things like the number of views every page is getting, how long
people spend on each page, etc.

Mechanistically, you copy and paste a little snippet of javascript into
your pages, and the code exports metrics to the Google Analytics
service. This PR sets up Google Analytics for serviceweaver.dev.

In the future, we should disable metrics when viewing the website
locally, but for now, they are always enabled.

--- a/website/templates/basic.html
+++ b/website/templates/basic.html
@@ -16,6 +16,7 @@
 
 <html>
   <head>
+    {{template "analytics.html" .}}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1">
     <title>{{.Title}}</title>
