--- a/website/templates/guide.html
+++ b/website/templates/guide.html
@@ -17,6 +17,7 @@
 <html>
   <!--TODO(rgrandl): the top menu is changing the position when you click on the blog. Fix it -->
   <head>
+    {{template "analytics.html" .}}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1">
     <title>Service Weaver User Guide</title>
