--- a/website/templates/blog.html
+++ b/website/templates/blog.html
@@ -16,6 +16,7 @@
 
 <html>
   <head>
+    {{template "analytics.html" .}}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1">
     <title>{{.Title}}</title>
