--- a/website/templates/blog.html
+++ b/website/templates/blog.html
@@ -16,16 +16,13 @@
 
 <html>
   <head>
-    {{template "analytics.html" .}}
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1">
-    <title>{{.Title}}</title>
-    <!-- <meta http-equiv="refresh" content="1"> -->
+    {{template "head.html" .}}
+    <title>Service Weaver Blog</title>
     <link rel="stylesheet" href="/assets/css/common.css">
     <link rel="stylesheet" href="/assets/css/blog.css">
   </head>
   <body>
-    <div class="page_blog">
+    <div class="page">
       {{template "header.html" .}}
       <div class="contents">
         {{.Contents}}
