--- a/website/templates/docs.html
+++ b/website/templates/docs.html
@@ -15,22 +15,26 @@
 -->
 
 <html>
+  <!--TODO(rgrandl): the top menu is changing the position when you click on the blog. Fix it -->
   <head>
-    {{template "analytics.html" .}}
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1">
-    <title>{{.Title}}</title>
-    <!-- <meta http-equiv="refresh" content="1"> -->
+    {{template "head.html" .}}
+    <title>Service Weaver Docs</title>
     <link rel="stylesheet" href="/assets/css/common.css">
-    <link rel="stylesheet" href="/assets/css/home.css">
-    <link rel="stylesheet" href="/assets/css/blog.css">
+    <link rel="stylesheet" href="/assets/css/docs.css">
   </head>
   <body>
     <div class="page">
       {{template "header.html" .}}
-      <div class="contents">
-        {{.Contents}}
+      <div class="holder">
+        <input type="checkbox" id="toc-toggle" checked/>
+        <label id="toc-button" for="toc-toggle" title="Click to toggle table of contents">☰</label>
+        <div class="toc" id="toc"></div>
+        <div class="contents" id="contents">
+          {{.Contents}}
+        </div>
       </div>
     </div>
   </body>
+  <script src="/assets/js/toc.js"></script>
+  <script src="/assets/js/copy.js"></script>
 </html>
