--- a/website/templates/head.html
+++ b/website/templates/head.html
@@ -14,12 +14,6 @@
  limitations under the License.
 -->
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-GWZW7L8C6L"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-GWZW7L8C6L');
-</script>
+{{template "analytics.html" .}}
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, minimum-scale=1">
