--- a/internal/status/templates/deployment.html
+++ b/internal/status/templates/deployment.html
@@ -114,7 +114,7 @@
         <div class="card-body">
           <ul>
             <li><a href="metrics?id={{.DeploymentId}}">Metrics</a></li>
-            <li><a href="{{traceurl .TraceFile}}">Tracing</a></li>
+            <li><a href="{{traceurl .App .DeploymentId}}">Tracing</a></li>
           </ul>
         </div>
       </details>
