Fix text shifting position on hover
Before this change the text of the command would move by a pixel or two
on hover. By removing the padding around the copy button the text no
longer moves on hover.

--- a/internal/status/assets/main.css
+++ b/internal/status/assets/main.css
@@ -107,7 +107,7 @@ details[open] .card-title {
   cursor: pointer;
   border: 0pt;
   background: white;
-  padding: 2pt;
+  padding: 0 2pt;
   border-radius: 4pt;
 }
 
