Fixed some visual bugs on mobile website.
This PR fixes two bugs that appeared when the website was viewed on
mobile. First, the jumbotron on the landing page was squeezed very thin.
I fixed this by removing the left and right margins on small pages.
Second, the top navigation header had elements overlapping vertically. I
fixed this by adjusting padding.

--- a/website/assets/css/common.css
+++ b/website/assets/css/common.css
@@ -69,9 +69,7 @@ header .active {
 header a {
   text-decoration: none;
   color: black;
-  padding: 0.75ch;
-  padding-left: 1ch;
-  padding-right: 1ch;
+  padding: 0.5ch;
 }
 header .navlink {
   color: #363434;
@@ -90,6 +88,8 @@ header ul {
 header li {
   display: inline-block;
   margin-left: 1ch;
+  padding-top: 0.5ch;
+  padding-bottom: 0.5ch;
 }
 
 .icon img {
