--- a/website/assets/css/common.css
+++ b/website/assets/css/common.css
@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 body {
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   padding: 0;
   margin: 0;
 }
