Wrote "How to Implement a Deployer" blog.
This PR introduces a "How to Implement a Deployer" blog which explains
what deployers are and how to write them. While writing this blog, we
discovered many things about the deployer API that could be improved
which led to a multi-week effort to revise the API, culminating in the
release of weaver v0.2.0.

Thanks to Sanjay, Srdjan, Robert, and Nipun for their great feedback on
the blog. It improved a ton thanks to everyone's input.

--- a/website/assets/css/blog.css
+++ b/website/assets/css/blog.css
@@ -49,3 +49,23 @@ blockquote {
     padding: 0.1em 10px;
     font-family:"Courier New";
 }
+
+/* Horizontally expand figures on small screens. */
+@media not (min-width: 800px) {
+  figure {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
+figcaption {
+  text-align: center;
+  font-weight: bold;
+}
+
+.note {
+  padding: 1rem;
+  background-color: #ffeaa799;
+  border-left: 6pt solid #fdcb6e;
+  border-radius: 4pt;
+}
