Add news section and discord channel

--- a/website/assets/css/common.css
+++ b/website/assets/css/common.css
@@ -83,6 +83,13 @@ header .navlink:hover:not(.active) {
   color: black;
   border-bottom: 2pt solid gray;
 }
+header .news {
+  color: red;
+}
+header .news:hover:not(.active) {
+  color: red;
+  border-bottom: 2pt solid gray;
+}
 header ul {
   list-style-type: none;
   display: inline-block;
