--- a/website/templates/news.html
+++ b/website/templates/news.html
@@ -17,7 +17,7 @@ limitations under the License.
 <html>
 <head>
   {{template "head.html" .}}
-  <title>{{.Title}}</title>
+  <title>News</title>
   <link rel="stylesheet" href="/assets/css/common.css">
 </head>
 <body>
