add service weaver news

--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -17,7 +17,7 @@ limitations under the License.
 <html>
 <head>
   {{template "head.html" .}}
-  <title>{{.Title}}</title>
+  <title>Service Weaver Contact Us</title>
   <link rel="stylesheet" href="/assets/css/common.css">
 </head>
 <body>
