Tweaked website's page widths and line heights.
This PR tweaks the website's page widths and line heights. Specifically,
I narrowed the default page width from 80rem to 65rem. I shrunk the blog
posts to 50rem. I also increased the line-height from 1 to 1.5.

I also some made some miscellaneous cleanups. I removed some unused
CSS classes, fixed some padding issues, etc.

--- a/website/assets/css/blog.css
+++ b/website/assets/css/blog.css
@@ -15,10 +15,8 @@
  */
 
 /* Limit the page content width to keep lines readable. */
-.page_blog {
-  padding-left: 20px;
-  padding-right: 20px;
-  max-width: 60em;
+.blog-contents {
+  max-width: 50rem;
   margin-left: auto;
   margin-right: auto;
 }
