--- a/website/templates/blog_entry.html
+++ b/website/templates/blog_entry.html
@@ -23,8 +23,8 @@
   </head>
   <body>
     {{template "header.html" .}}
-    <div class="page_blog">
-      <div class="contents">
+    <div class="page">
+      <div class="blog-contents">
         {{.Contents}}
       </div>
     </div>
