Added twitter icon to top of website.
This PR adds a twitter icon to the top of the website beside the github
icon. It, obviously, links to our new twitter!

--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -28,7 +28,13 @@
       <li><a href="https://pkg.go.dev/github.com/ServiceWeaver/weaver" class="navlink">API</a></li>
     </ul>
   </div>
-  <a class="icon" href="https://github.com/ServiceWeaver/weaver">
-    <img src="/assets/images/github_logo.svg" alt="GitHub">
-  </a>
+  <!-- Icons from https://github.com/gauravghongde/social-icons. -->
+  <div>
+    <a class="icon" href="https://twitter.com/serviceweaver">
+      <img src="/assets/images/twitter_icon.svg" alt="Twitter">
+    </a>
+    <a class="icon" href="https://github.com/ServiceWeaver/weaver">
+      <img src="/assets/images/github_icon.svg" alt="GitHub">
+    </a>
+  </div>
 </header>
