Prettified News page on website.

--- a/website/templates/news.html
+++ b/website/templates/news.html
@@ -19,6 +19,7 @@ limitations under the License.
   {{template "head.html" .}}
   <title>Service Weaver News</title>
   <link rel="stylesheet" href="/assets/css/common.css">
+  <link rel="stylesheet" href="/assets/css/news.css">
 </head>
 <body>
 {{template "header.html" .}}
