Added inline heading links to website docs.
This PR adds inline heading links to the website docs which appear when
the cursor hovers over the heading. This is a pretty standard feature on
a lot of websites (e.g., [GitHub][1], [go docs][2]).

[1]: https://github.com/ServiceWeaver/weaver
[2]: https://pkg.go.dev/github.com/ServiceWeaver/weaver

--- a/website/assets/css/docs.css
+++ b/website/assets/css/docs.css
@@ -151,3 +151,23 @@
 .pre-copy-button:active {
   background: #888;
 }
+
+h1:hover .heading-link,
+h2:hover .heading-link,
+h3:hover .heading-link,
+h4:hover .heading-link,
+h5:hover .heading-link,
+h6:hover .heading-link {
+  visibility: visible;
+}
+
+.heading-link {
+  margin-left: 1ch;
+  text-decoration: none;
+  visibility: hidden;
+  opacity: 50%;
+}
+
+.heading-link:hover {
+  opacity: 100%;
+}
