add discord link to the main page

--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -30,6 +30,9 @@
   </div>
   <!-- Icons from https://github.com/gauravghongde/social-icons. -->
   <div>
+    <a class="icon" href="https://discord.gg/FzbQ3SM8R5">
+      <img src="/assets/images/discord_icon.svg" alt="Discord">
+    </a>
     <a class="icon" href="https://twitter.com/serviceweaver">
       <img src="/assets/images/twitter_icon.svg" alt="Twitter">
     </a>
