Resized and spaced partner logos.

--- a/website/assets/css/workshops.css
+++ b/website/assets/css/workshops.css
@@ -41,3 +41,18 @@
 .partners-table th {
   background-color: #f2f2f2;
 }
+
+#partners {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.partner_logo {
+  width: 10rem;
+  margin: 1rem;
+}
+
+.partner_logo img {
+  width: 100%;
+}
