status,dashboard: render weavelet id with pids
Extends work in PR https://github.com/ServiceWeaver/weaver/pull/767 to
refect weavelet id on status dashboard as well.

Thanks to @rgrandl for diff provided here: https://github.com/ServiceWeaver/weaver/pull/767#pullrequestreview-2088787919

Signed-off-by: flouthoc <flouthoc.git@gmail.com>

--- a/internal/status/templates/deployment.html
+++ b/internal/status/templates/deployment.html
@@ -152,14 +152,16 @@
               <th>Component</th>
               <th>Replication</th>
               <th>PIDs</th>
+              <th>Weavelet IDs</th>
             </tr>
           </thead>
           <tbody>
             {{range $c := .Components}}
             <tr>
               <td>{{shorten $c.Name}}</td>
-              <td>{{len $c.Pids}}</td>
-              <td>{{pidjoin $c.Pids}}</td>
+              <td>{{len $c.Replicas}}</td>
+              <td>{{pidjoin $c.Replicas}}</td>
+              <td>{{widjoin $c.Replicas}}</td>
             </tr>
             {{end}}
           </tbody>
