--- a/website/assets/css/home.css
+++ b/website/assets/css/home.css
@@ -57,6 +57,24 @@
   margin-right: auto;
 }
 
+.announcement-banner {
+  background-color: #f8d7da; /* Light red background */
+  color: #721c24; /* Dark red text */
+  padding: 15px;
+  text-align: center;
+  font-size: 20px;
+  position: fixed;
+  height: auto;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+}
+
+.announcement-banner p {
+  margin: 0;
+}
+
 .intro-row {
   display: flex;
   flex-wrap: wrap;
